@@ -1907,6 +1907,12 @@
             This command has an effect only when included in a script being run as a 
             preliminary action before the main action.</TD>
         </TR>
+        <TR vAlign="top">
+          <TD class="style12">SkipAcquiringGroup [ID]</TD>
+          <TD>Tells the Navigator to skip points whose group ID match either the group ID of 
+            the current acquire item, or the optional ID entered with the command.&nbsp; The 
+            Navigator must be acquiring at points.</TD>
+        </TR>
       </TABLE>
       <BR>
       <P><A name="miscellaneous"></A><B>Miscellaneous Commands</B></P>
