@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+4/17/17: Added script command to skip points in the current group.
+
 4/15/17: Added script command for writing a single-image file of specified
 type and compression.
 
